2000-05-07  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-register.c (deleteCB): use g_strdup_printf
	instead of asprintf.

2000-05-06  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/engine/Query.c: g_list_sort *returns* the new first node.

	* src/engine/Group.c
	(xaccAccountsBeginStagedTransactionTraversals): bug fix -- used wrong
	pointer type.
	(xaccSplitsBeginStagedTransactionTraversals): bug fix -- used wrong
	pointer type.

	* src/gnome/reconcile-list.c (gnc_reconcile_list_fill): print the
	amount using the account's currency.

	* src/gnome/dialog-transfer.c (gnc_xfer_dialog_create): remove the
	currency symobl from the dialog and use the account currency, if
	available, in printing amounts.

	* src/gnome/window-adjust.c: remove the currency symbol from the
	dialog and use the account currency in printing amounts.

2000-05-05  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/SplitLedger.c (xaccSRSaveRegEntry): set the date entered
	time of the blank split transaction.

	* src/gnome/window-reconcile.c: print different currencies
	correctly. Print reconciled balance so far.

2000-05-04  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-main.c (gnc_main_create_toolbar): removed the
	'open file' item from the toolbar, to lessen conflict with the
	'open account' item.

2000-05-03  Dave Peticolas  <peticola@cs.ucdavis.edu>

	* src/gnome/window-register.c: add a gui option for sorting by
	date entered.

	* src/engine/Query.c: add a BY_DATE_ENTERED sorting option.

	* src/scm/prefs.scm: convert the gui options to internal options.

	* src/scm/options.scm: add an interal option type with no frills.

	* src/engine/util.c (xaccSPrintAmount): add a space after the
	currency code to make the currency symbol.
	(gnc_lconv_set_char): check for the lconv default value using
	CHAR_MAX, not 127.

2000-05-02  Robert Graham Merkel  <rgmerk@mira.net>

	* man/gnc-prices.1: fixed typo.
